k8s/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicedesk
spec:
  selector:
    app: servicedesk
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
